examples/invalid/init_class_missing_fields.atom
class Test {
    let one;
    let two;
    let three;
}

fn main() {
    Test(one: 10, two: 20);
}
